added openstackCredentials field to request body in /validate route and did some debugging
